Solved bugs fot unit tests